- Houses may now be created within larger houses.

25/08/2001
- Rings of Flames, Acid and Ice now reduce the corresponding element damage
  by (AC * 5)%

28/08/2001
- Slowing effect of monks doubled in effectiveness

30/08/2001
- Updated commands.txt thanks to jir

10/09/2001
- When someone dies stuff only gets dropped if he/she was >= lvl5.
  Thats to prevent cheezing

27/09/2001
- Server bugfix, object description string was too small [80] for including
  the fake artifact inscriptions. I made every instance [160]. This will
  never be necessary, certainly not in all cases, but efficiency may be
  worked upon later.

28/09/2001
- Client bug fixed (peruse file overlay) Usually caused by lag.
  Common symptom, the player list appears on game screen.


28/09/2001 - Client changes (Zz)
- Now you can specify an argument in Windows and client will connect 
  directly bypassing meta server (previously this only worked for Unix clients)
- Multiple colors for different types of messages in recall window 
  (death, kill, private messages, etc.)
- CTRL-O works like CTRL-P except only shows important messages - good 
  for review after a long fight or long AFK

29/09/2001
- Target friendly bug fixed - player in own party was used ;)
- Colour messaging added - should work with all message types.

01/10/2001
- Golem following/guard bug fixed. Golem will now follow down/up
  stairs regardless of guard.
- Other bugs identified (unfixed) Target friendly with golem causes
  chaos. The golem attacks nearest player, kills then homes in on the ghost.
  Also, swapping places with the golem causes problems. (Urgent fix)

02/10/2001
- Object ownership made invalid now after player ghost death. It was
  recycling ownership. It is set to MAX_ID+1.
- Annoying level 1 suicides are no longer shown.

03/10/2001
- A couple of bug fixes, and some debug stuff removed (mine)
- Fixed golem change places with owner.
- Life scroll now shows life returning (lite_spot)